--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,7 +1,7 @@
-<section class="container">
+<section class="container"> 
     <div class="card-container" *ngFor='let loc of locations'>
-        <div class="card text-white bg-secondary mb-3 {{ isEven ? 'even' : 'odd' }} " style="max-width: 18rem;">
-            <div class="card-header">{{ loc.city }}</div>
+        <div class="card text-white bg-info mb-3" >
+            <div class="card-header"><strong>{{ loc.city }}</strong></div>
             <div class="card-body">
                 <img src="{{ loc.icon }}" alt="" class="location-icon">
                 <p class="card-text">Min: {{ loc.min }}</p>
