changed colors and typos

--- a/src/app/locations/locations.component.css
+++ b/src/app/locations/locations.component.css
@@ -22,3 +22,8 @@ section {
 .card {
     height: 100%;
 }
+
+/* won't work because .testing is not part of the locations component */
+.testing {
+    color: white;
+}
