--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -4,8 +4,8 @@
             <div class="card-header"><strong>{{ loc.city }}</strong></div>
             <div class="card-body">
                 <img src="{{ loc.icon }}" alt="" class="location-icon">
-                <p class="card-text">Min: {{ loc.min }}</p>
-                <p class="card-text">Min: {{ loc.max }}</p>
+                <p class="card-text"><strong>Min:</strong> {{ loc.min }}°C</p>
+                <p class="card-text"><strong>Max:</strong> {{ loc.max }}°C</p>
             </div>
         </div>
     </div>
