will show but wont disappear

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,8 @@ h1 {
     transform: translateX(-50%);
     opacity: 0;
 }
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+}
