--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -7,6 +7,19 @@
                 <p class="card-text"><strong>Min:</strong> {{ loc.min }}°C</p>
                 <p class="card-text"><strong>Max:</strong> {{ loc.max }}°C</p>
             </div>
+
+            <div class="card modal">
+                <div class="card-header modal-header">
+                    <div>{{ loc.city }}</div>
+                    <div id="Close">Close</div>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
