--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -8,7 +8,7 @@
                 <p class="card-text"><strong>Max:</strong> {{ loc.max }}°C</p>
             </div>
 
-            <div class="card modal">
+            <div class="card modal" ng>
                 <div class="card-header modal-header">
                     <div>{{ loc.city }}</div>
                     <div id="Close">Close</div>
