--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,25 +1,23 @@
 <section class="container"> 
     <div class="card-container" *ngFor='let loc of locations'>
-        <div class="card text-white bg-info mb-3" appReveal >
-            <div class="card-header"><strong>{{ loc.city }}</strong></div>
+        <div class="card text-white bg-info mb-3" (messageEvent)="receiveMessage($event)" appReveal >
+            <div class="card-header"><strong>{{ loc.city }} {{ message }}</strong></div>
             <div class="card-body">
                 <img src="{{ loc.icon }}" alt="" class="location-icon">
                 <p class="card-text"><strong>Min:</strong> {{ loc.min }}°C</p>
                 <p class="card-text"><strong>Max:</strong> {{ loc.max }}°C</p>
             </div>
-
-            <div class="card modal">
-                <div class="card-header modal-header">
-                    <div>{{ loc.city }}</div>
-                    <div id="Close">Close</div>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+        </div>
+        <div class="card show" *ngIf='message'>
+            <div class="card-header modal-header">
+                <div>{{loc.city}}</div>
+                <div id="Close">Close</div>
             </div>
-
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
         </div>
     </div>
 </section>
