--- a/src/app/locations/locations.component.css
+++ b/src/app/locations/locations.component.css
@@ -3,11 +3,16 @@ section {
     gap: 1rem;
     grid-template-columns: 1fr 1fr;
     max-width: 540px;
+    grid-template-rows: repeat(auto-fit, 291.5px);
 }
 
 .card-body {
     display: grid;
     place-items: center;
+}
+
+.card-container {
+    max-height: 291.5px;
 }
 
 .card-header {
@@ -20,17 +25,13 @@ section {
 }
 
 .card {
-    height: 100%;
+    height: 291.5px;
 }
 
 .show {
     position: absolute;
-    width: minmax();
-    height: 300px;
-    /* top: 50%;
-    left: 50%; */
-    transform: translateX(-50%);
-    transform: translateY(-50%);
+    max-width: 247px;
+    transform: translateY(-105%);
     z-index: 1;
 }
 
