directives challenge completed

--- a/src/app/locations/locations.component.css
+++ b/src/app/locations/locations.component.css
@@ -41,3 +41,8 @@ section {
     display: flex;
     justify-content: space-between;
 }
+
+.modal-header div:last-child {
+    text-decoration: underline;
+    cursor: pointer;
+}
