--- a/src/app/locations/locations.component.html
+++ b/src/app/locations/locations.component.html
@@ -1,6 +1,6 @@
 <section class="container"> 
     <div class="card-container" *ngFor='let loc of locations'>
-        <div class="card text-white bg-info mb-3" (messageEvent)="receiveMessage($event)" appReveal >
+        <div class="card text-white bg-info mb-3" (click)="openModal(loc.city)" (messageEvent)="receiveMessage($event)" appReveal >
             <div class="card-header"><strong>{{ loc.city }}</strong></div>
             <div class="card-body">
                 <img src="{{ loc.icon }}" alt="" class="location-icon">
@@ -8,7 +8,7 @@
                 <p class="card-text"><strong>Max:</strong> {{ loc.max }}°C</p>
             </div>
         </div>
-        <div class="card show" *ngIf='message'>
+        <div class="card show" *ngIf='message && city === loc.city'>
             <div class="card-header modal-header">
                 <div>{{loc.city}}</div>
                 <div (click)="closeBtn()">Close</div>
@@ -16,7 +16,7 @@
             <div class="card-body">
                 <h5 class="card-title">Special title treatment</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a target="_blank" href="https://www.meteored.mx/{{ loc.url }}" class="btn btn-primary">More details</a>
             </div>
         </div>
     </div>
